Fixing home layout issues

--- a/src/css/global/style.css
+++ b/src/css/global/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 main {
-    padding: 4rem 0;
+    margin: 4rem 0;
 }
 
 button {
